--- a/src/pages/homePage/components/skillsBanner/_skillsBannerBreakpoints.scss
+++ b/src/pages/homePage/components/skillsBanner/_skillsBannerBreakpoints.scss
@@ -15,7 +15,7 @@ $namespace: s.$namespace;
     a {
       font-size: calc(#{$font-size} * 0.25);
       margin-top: calc(#{$font-size} / 2);
-      padding: calc(#{$font-size} * 0.28 / 3) calc(#{$font-size} * 0.28);
+      padding: calc(#{$font-size} * 0.3 / 3) calc(#{$font-size} * 0.3);
     }
   }
 }
